--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -27,14 +27,8 @@
                             {{form.username|add_class:"form-input"}}
                         </div>
                         <div class="form-group">
-                            {{form.email|add_class:"form-input"}}
-                        </div>
-                        <div class="form-group">
-                            {{form.password1|add_class:"form-input"}}
+                            {{form.password|add_class:"form-input"}}
                             <span toggle="#password" class="zmdi zmdi-eye field-icon toggle-password"></span>
-                        </div>
-                        <div class="form-group">
-                            {{form.password2|add_class:"form-input"}}
                         </div>
                         <div class="form-group">
                             <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
@@ -45,7 +39,7 @@
                         </div>
                     </form>
                     <p class="loginhere">
-                        Have already an account ? <a href="{% url 'accounts:login' %}" class="loginhere-link">Login here</a>
+                        are you haven't account ? <a href="{% url 'accounts:register' %}" class="loginhere-link">Register here</a>
                     </p>
                 </div>
             </div>
