--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,54 +1,58 @@
+{% extends 'base.html' %}
 {% load static %}
 {% load widget_tweaks %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Colorlib</title>
+{% block main %}
 
-    <!-- Font Icon -->
-    <link rel="stylesheet" href="{% static 'accounts/fonts/material-icon/css/material-design-iconic-font.min.css' %}">
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Sign Up Form by Colorlib</title>
 
-    <!-- Main css -->
-    <link rel="stylesheet" href="{% static 'accounts/css/style.css' %}">
-</head>
-<body>
+        <!-- Font Icon -->
+        <link rel="stylesheet" href="{% static 'accounts/fonts/material-icon/css/material-design-iconic-font.min.css' %}">
 
-    <div class="main">
+        <!-- Main css -->
+        <link rel="stylesheet" href="{% static 'accounts/css/style.css' %}">
+    </head>
+    <body>
 
-        <section class="signup">
-            <!-- <img src="images/signup-bg.jpg" alt=""> -->
-            <div class="container">
-                <div class="signup-content">
-                    <form method="POST" id="signup-form" class="signup-form">{% csrf_token %}
-                        <h2 class="form-title">Create account</h2>
-                        <div class="form-group">
-                            {{form.username|add_class:"form-input"}}
-                        </div>
-                        <div class="form-group">
-                            {{form.password|add_class:"form-input"}}
-                            <span toggle="#password" class="zmdi zmdi-eye field-icon toggle-password"></span>
-                        </div>
-                        <div class="form-group">
-                            <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
-                            <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" name="submit" id="submit" class="form-submit" value="Sign up"/>
-                        </div>
-                    </form>
-                    <p class="loginhere">
-                        are you haven't account ? <a href="{% url 'accounts:register' %}" class="loginhere-link">Register here</a>
-                    </p>
+        <div class="main">
+
+            <section class="signup">
+                <!-- <img src="images/signup-bg.jpg" alt=""> -->
+                <div class="container">
+                    <div class="signup-content">
+                        <form method="POST" id="signup-form" class="signup-form">{% csrf_token %}
+                            <h2 class="form-title">Create account</h2>
+                            <div class="form-group">
+                                {{form.username|add_class:"form-input"}}
+                            </div>
+                            <div class="form-group">
+                                {{form.password|add_class:"form-input"}}
+                                <span toggle="#password" class="zmdi zmdi-eye field-icon toggle-password"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
+                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" name="submit" id="submit" class="form-submit" value="Sign up"/>
+                            </div>
+                        </form>
+                        <p class="loginhere">
+                            are you haven't account ? <a href="{% url 'accounts:register' %}" class="loginhere-link">Register here</a>
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-    </div>
+        </div>
 
-    <!-- JS -->
-    <script src="{% static 'accounts/vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'accounts/js/main.js' %}"></script>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
-</html>
+        <!-- JS -->
+        <script src="{% static 'accounts/vendor/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'accounts/js/main.js' %}"></script>
+    </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+    </html>
+{% endblock %}
