--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{% url 'blog:home' %}">{% title 'Blog' %}</a>
+                {% if request.user.is_authenticated %}
+                    <a class="navbar-brand" href="{% url 'accounts:home' %}">Welcome {{user.username}}</a>
+                {% else %}
+                    <a class="navbar-brand" href="{% url 'blog:home' %}">{% title 'Blog' %}</a>
+                {% endif %}
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
