--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -25,12 +25,12 @@
                 <div class="container">
                     <div class="signup-content">
                         <form method="POST" id="signup-form" class="signup-form">{% csrf_token %}
-                            <h2 class="form-title">Create account</h2>
+                            <h2 class="form-title">LOG IN</h2>
                             <div class="form-group">
-                                {{form.username|add_class:"form-input"}}
+                                {% render_field form.username class="form-input" placeholder="username" %}
                             </div>
                             <div class="form-group">
-                                {{form.password|add_class:"form-input"}}
+                                {% render_field form.password class="form-input" placeholder="password" %}
                                 <span toggle="#password" class="zmdi zmdi-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
@@ -38,7 +38,7 @@
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
                             </div>
                             <div class="form-group">
-                                <input type="submit" name="submit" id="submit" class="form-submit" value="Sign up"/>
+                                <input type="submit" name="submit" id="submit" class="form-submit" value="Sign in"/>
                             </div>
                         </form>
                         <p class="loginhere">
