--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -27,17 +27,17 @@
                         <form method="POST" id="signup-form" class="signup-form">{% csrf_token %}
                             <h2 class="form-title">Create account</h2>
                             <div class="form-group">
-                                {{form.username|add_class:"form-input"}}
+                                {% render_field form.username class="form-input" placeholder="username" %}
                             </div>
                             <div class="form-group">
-                                {{form.email|add_class:"form-input"}}
+                                {% render_field form.email class="form-input" placeholder="email" %}
                             </div>
                             <div class="form-group">
-                                {{form.password1|add_class:"form-input"}}
+                                {% render_field form.password1 class="form-input" placeholder="password" %}
                                 <span toggle="#password" class="zmdi zmdi-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
-                                {{form.password2|add_class:"form-input"}}
+                                {% render_field form.password2 class="form-input" placeholder="confirm password" %}
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
