--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,11 @@
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 {% if request.user.is_authenticated %}
-                    <a class="navbar-brand" href="{% url 'accounts:home' %}">Welcome {{user.username}}</a>
+                    {% if request.user.is_staff %}
+                        <a class="navbar-brand" href="{% url 'accounts:home' %}">Welcome {{user.username}}</a>
+                    {% else %}
+                        <a class="navbar-brand" href="{% url 'accounts:logout' %}">Log Out</a>
+                    {% endif %}
                 {% else %}
                     <a class="navbar-brand" href="{% url 'blog:home' %}">{% title 'Blog' %}</a>
                 {% endif %}
@@ -34,11 +38,15 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:category' %}">Categories</a></li>
                         {% if request.user.is_authenticated %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'accounts:home' %}">Profile</a></li>
+                            {% if request.user.is_staff %}
+                                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'accounts:home' %}">Profile</a></li>
+                            {% else %}
+                                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:home' %}">About</a></li>
+                            {% endif %}
                         {% else %}
                             <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'accounts:home' %}">Log in</a></li>
                         {% endif %}
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:contact' %}">Contact</a></li>
                     </ul>
                 </div>
             </div>
